
	* twittering-mode.el: Confirm that the process is alive on waiting
	for its sentinel.
	(twittering-oauth-get-token-alist): check whether the process is
	alive on waiting for the invocation of the sentinel for the
	process.
	(twittering-tinyurl-get): likewise.
	(twittering-verify-credentials): likewise.
	(twittering-get-list-sync): use `twittering-process-alive-p'.

2011-05-08  Tadashi MATSUO  <tad@mymail.twin.jp>

	* test/test-twittering-mode.el: Fix and add tests of proxy
	configuration. Now they do not depend on environment variables.

2011-05-06  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Replace the symbol `us-ascii' for a
	coding-system with `iso-safe', which is valid even on Emacs21.
	(twittering-ensure-ca-cert): use `iso-safe' instead of `us-ascii'
	as a coding-system for ASCII.
	(twittering-start-http-session-curl-https-p): likewise.
	(twittering-initialize-global-variables-if-necessary): likewise.

	* twittering-mode.el: Add some directories for Emacs21 to
	`load-path' even when byte-compiling the file on Emacs21.

	* twittering-mode.el: embed a timeline spec string such as
	"#HASHTAG" for `goto-spec' of a hashtag instead of a search
	timeline spec as an internal representation.
	(twittering-make-hashtag-timeline-spec-string-direct): new macro.
	(twittering-make-fontified-tweet-text): embed a timeline spec
	string such as "#HASHTAG" for `goto-spec' of a hashtag instead of
	a search timeline spec as an internal representation.

	* twittering-mode.el: Add `twittering-update-status' as a function.
	(twittering-update-status-function): update docstring.
	(twittering-update-status-from-pop-up-buffer): rename the argument
	`spec' `tweet-type-as-spec'.
	(twittering-update-status-from-minibuffer): likewise.
	(twittering-update-status): new function.
	(twittering-direct-message): call `twittering-update-status'
	instead of referring `twittering-update-status-function'.
	(twittering-reply-to-user): likewise.